# LilyCloudProto

./: .gitignore  .pre-commit-config.yaml  README.md  TRASH_MODULE_CONTEXT.md  pyproject.toml
docs/: API Design.md  CONTRIBUTING.md  Database Design.md
docs/API Design/: API Overview.md  Administration.md  Authentication.md  File Sharing.md  File System.md
lilycloudproto/: config.py  dependencies.py  error.py  main.py
lilycloudproto/apis/: admin_storage.py  admin_task.py  admin_user.py  auth.py  files.py  files_transfer.py  share.py  transfer.py  trash.py  webdav.py
lilycloudproto/apis/admin/: storage.py  task.py  user.py
lilycloudproto/domain/: driver.py
lilycloudproto/domain/entities/: share.py  storage.py  task.py  token.py  trash.py  user.py
lilycloudproto/domain/values/: auth.py  share.py  storage.py  task.py  trash.py  user.py
lilycloudproto/domain/values/admin/: storage.py  task.py
lilycloudproto/domain/values/files/: file.py  list.py  search.py  sort.py
lilycloudproto/entities/: storage.py  task.py  user.py
lilycloudproto/infra/: auth_repository.py  auth_service.py  database.py  seed.py  storage_repository.py  task_repository.py  user_repository.py
lilycloudproto/infra/drivers/: local_driver.py  s3_driver.py
lilycloudproto/infra/repositories/: share_repository.py  storage_repository.py  task_repository.py  token_repository.py  trash_repository.py  user_repository.py
lilycloudproto/infra/services/: auth_service.py  file_transfer_service.py  storage_service.py  task_service.py  task_worker.py  transfer_service.py
lilycloudproto/infra/tasks/: task_queue.py  task_worker.py
lilycloudproto/models/: auth.py  share.py  storage.py  task.py  trash.py  user.py
lilycloudproto/models/admin/: storage.py  task.py  user.py
lilycloudproto/models/files/: command.py  file.py  list.py  search.py  sort.py  transfer.py  trash.py
