[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lilycloudproto"
version = "0.1.0"
description = "Lily Cloud Prototype"
authors = [
    { name = "2edbef4a9b", email = "echofedn@outlook.com" },
    { name = "oC10H15No", email = "richardyangruichen@gmail.com" },
    { name = "apple-37", email = "1833346463@qq.com" }
]
dependencies = [
    "aiosqlite",
    "fastapi",
    "scalar_fastapi",
    "uvicorn",
    "sqlalchemy",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportCallInDefaultInitializer = false

[tool.black]
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
lint.select = ["E", "F", "B", "I", "UP", "C4", "SIM", "PL", "RUF"]
lint.ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
